--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-torch==1.8.0
-pytorch3d==0.4.0
+numpy==1.20.1
 torch_geometric==1.6.3
+psbody_mesh==0.4
+matplotlib==3.3.4
+h5py==3.2.1
+torch==1.8.0
+trimesh==3.9.14
+tqdm==4.59.0
+pytorch3d==0.4.0
+scikit_image==0.18.1
+torch_scatter==2.0.6
+plyfile==0.7.3
+scipy==1.6.1
+openmesh==1.1.6
+scikit_learn==0.24.1
+skimage==0.0
